--- a/config-template.json
+++ b/config-template.json
@@ -1,7 +1,7 @@
 {
   "channel_type": "wx",
   "model": "",
-  "open_ai_api_key": "YOUR API KEY",
+  "open_ai_api_key": "Link_Tr3z8SULOnqQ8oi0EeQcGPJC8mWL7x7XC5nLo35sBz",
   "text_to_image": "dall-e-2",
   "voice_to_text": "openai",
   "text_to_voice": "openai",
